namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
   project: myproject
  name: rajeevns
