apple.yml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app 
  labels:     
    app: apple
  namespace: development
spec: 
   containers:
   - name: apple-app
     image: hashicorp/http-echo
     args:
          - "-text=apple"
