apple-service.yml
kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  type: NodePort      
  selector:
    app: apple
  ports:
    - port: 5678
