banana-service.yml
kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  type: NodePort
  selector:
      app: banana
  ports:
    - port: 5678
