grapes-service.yml
kind: Service
apiVersion: v1
metadata:
  name: grapes-service
  namespace: rajeevns
spec:
  type: NodePort      
  selector:
    app: grapes
  ports:
    - port: 5678
